--- a/network-monitor/Views/Home/Index.cshtml
+++ b/network-monitor/Views/Home/Index.cshtml
@@ -4,5 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Network Tools</h1>
-    @Html.ActionLink("View ARP Table", "ArpResults", "Network")
+    @Html.ActionLink("View ARP Table", "ArpResults", "Network")<br />
+    @Html.ActionLink("Ping an IP Address", "Ping", "Network")
 </div>
+
