Added subnet calculator

--- a/network-monitor/Views/Home/Index.cshtml
+++ b/network-monitor/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 <div class="text-center">
     <h1 class="display-4">Network Tools</h1>
     @Html.ActionLink("View ARP Table", "ArpResults", "Network")<br />
-    @Html.ActionLink("Ping an IP Address", "Ping", "Network")
+    @Html.ActionLink("Ping an IP Address", "Ping", "Network")<br />
+    @Html.ActionLink("Subnet Calculator", "SubnetCalc", "Network")
 </div>
 
