Made tweaks to styling

--- a/network-monitor/Views/Network/SubnetCalc.cshtml
+++ b/network-monitor/Views/Network/SubnetCalc.cshtml
@@ -41,9 +41,9 @@
 				}
 			</select>
 		</div>
-		<div class="form-group">
+        <div class ="form-group">
 			<label for="ipAddress">IP Address</label>
-			<input class="form-control" id="ipAddress" name="ipAddress" />
+            <input type="text" id="ipAddress" name="ipAddress" />
 		</div>
 		<button type="submit" class="btn btn-primary">Calculate</button>
 	</form>
