--- a/network-monitor/wwwroot/css/site.css
+++ b/network-monitor/wwwroot/css/site.css
@@ -7,7 +7,7 @@ body, h1, h2, h3, p, a {
 }
 
 body {
-    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+    background: #193b47;
     margin: 0;
     padding: 0;
     font-size: 16px;
@@ -65,7 +65,7 @@ button, .btn {
 /* Containers */
 .container {
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 20px auto;
     padding: 20px;
     border: 1px solid #00ffff;
     border-radius: 10px;
@@ -118,12 +118,13 @@ pre {
     overflow-x: auto;
 }
 
-/* Footer */
-footer {
-    text-align: center;
-    padding: 10px 0;
-    background: rgba(20, 20, 20, 0.9);
+/*Navbar*/
+.navbar-brand {
     color: #00ffff;
-    border-top: 2px solid #00ffff;
-    box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.3);
+    transition: color 0.3s ease-in-out;
+}
+
+.navbar-brand:hover {
+    color: #00e6e6;
+    text-shadow: 0 0 5px #00e6e6;
 }
